@@ -1,8 +1,8 @@
 ## automake.am
 ##
-## Makefile for the glassplayerhost(1) launcher for glassplayer(1).
+## conf/ automake.am for GlassPlayerHost
 ##
-## (C) Copyright 2014-2015 Fred Gleason <fredg@paravelsystems.com>
+## (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
 ##
 ##   This program is free software; you can redistribute it and/or modify
 ##   it under the terms of the GNU General Public License version 2 as
@@ -20,32 +20,10 @@
 ##
 ## Use automake to process this into a Makefile.in
 
-AM_CPPFLAGS = -Wall -DPREFIX=\"$(prefix)\" -Wno-strict-aliasing @QT4_CFLAGS@ @WEBHOST_CFLAGS@
-MOC = @QT4_MOC@
+EXTRA_DIST = glassplayerhost-sample.conf
 
-# The dependency for qt's Meta Object Compiler (moc)
-moc_%.cpp:	%.h
-	@MOC@ $< -o $@
-
-
-bin_PROGRAMS = glassplayerhost
-
-dist_glassplayerhost_SOURCES = glassplayerhost.cpp glassplayerhost.h
-
-nodist_glassplayerhost_SOURCES = config.cpp config.h\
-                                 moc_glassplayerhost.cpp
-
-glassplayerhost_LDADD = @SIRLIBS@ @WEBHOST_LIBS@
-glassplayerhost_LDFLAGS = @SIRFLAGS@
-
-CLEANFILES = *~\
-             moc_*\
-             *.obj\
-             *.idb\
-             *.pdb\
-             *ilk
-
-DISTCLEANFILES = config.cpp config.h
-
+CLEANFILES = *~
 MAINTAINERCLEANFILES = *~\
+                       aclocal.m4\
+                       configure\
                        Makefile.in
