@@ -1,0 +1,4 @@
+[GlassPlayerHost]
+AudioDevice=ALSA
+AlsaDevice=hw:0
+StreamUrl=
